# llm-wiki

./: .gitignore  CHANGES.md  docker-compose.yml  mlflow.Dockerfile  run.sh
llm-wiki-backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
llm-wiki-backend/app/: config.py  main.py
llm-wiki-backend/app/api/routes/: conversations.py  wiki.py
llm-wiki-backend/app/api/schemas/: wiki.py
llm-wiki-backend/app/db/: conversations.py  ingestion_history.py  wiki.py
llm-wiki-backend/app/services/llm/: client.py  models.py
llm-wiki-backend/app/services/preprocessing/: models.py  ocr.py  parser.py
llm-wiki-backend/app/services/wiki/: index.py  models.py  tools.py
llm-wiki-backend/app/services/wiki_agent/: agent.py  prompts.py
llm-wiki-backend/app/services/wiki_ingest/: agent_loop.py  edit_plan.py  executor.py  explorer.py  prompts.py  schema.py  scout.py
llm-wiki-frontend/: Dockerfile  package-lock.json  package.json
llm-wiki-frontend/app/: globals.css  layout.tsx  page.tsx
llm-wiki-frontend/app/api/conversations/: route.ts
llm-wiki-frontend/app/api/wiki/history/: route.ts
llm-wiki-frontend/app/api/wiki/ingest/: route.ts
llm-wiki-frontend/app/conversations/[id]/: page.tsx
llm-wiki-frontend/app/wiki/: page.tsx
llm-wiki-frontend/app/wiki/history/: page.tsx
llm-wiki-frontend/components/: ChatPanel.tsx  ConversationView.tsx  DiffView.tsx  Sidebar.tsx  WikiPanel.tsx
llm-wiki-frontend/lib/: api.ts  renderMarkdown.tsx  types.ts
mlruns/: mlflow.db
wiki/.obsidian/: graph.json  workspace.json
(+4 files in other folders)
