[project]
name = "llm-wiki-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "openai>=1.40",
    "mistralai>=1.0",
    "pypdf>=4.3",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langsmith>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
